--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordpress интенсив</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="promo">
@@ -13,6 +14,20 @@
                 <img src="icons/logo.png" alt="Logo" class="logo_img">
                 <div class="logo_text">WordPress интенсив</div>
             </div>
+
+            <h1 class="title">Создать свой сайт на WordPress</h1>
+            <div class="simple">
+                <h2 class="title_big">это просто!</h2>
+                <div class="line"></div>
+            </div>
+            <h2 class="title">Куда сложнее сделать это правильно!</h2>
+
+            <div class="promo_text">
+                Ежедневно в России появляется более 5 000 новых сайтов.<br>
+                И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!
+            </div>
+
+            <button class="promo_btn">Записаться на интенсив!</button>
         </div>
     </section>
 </body>
