--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             </div>
 
             <button class="promo_btn">Записаться на интенсив!</button>
+
+            <div class="more">
+                <div class="more_text">узнать больше об интенсиве</div>
+                <img src="icons/arrow-down.png" alt="down" class="more_img">
+            </div>
+        </div>
+    </section>
+
+    <section class="waiting">
+        <div class="container">
+            <h2 class="waiting_header">Что вас ждет в нашем интенсиве?</h2>
         </div>
     </section>
 </body>
