--- a/index.html
+++ b/index.html
@@ -118,15 +118,32 @@
 
     <section class="gift">
         <div class="container">
-            <div class="gift_wrapper">
                 <img src="icons/gift_box.png" alt="gift" class="gift_img">
                 <div class="gift_text">
                     Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!
                 </div>
                 <button class="gift_btn">Записаться на интенсив!</button>
-            </div>
         </div>
     </section>
     
+    <section class="first">
+        <div class="container">
+                <img src="img/first_webinar/laptop_people.png" alt="First webinar" class="first_img">
+                <h2 class="first_header">Первый вебинар состоится:</h2>
+                <div class="first_title">10 сентября в 20:00 по Москве</div>
+                <div class="first_text">Успейте записаться, количество мест ограничено!</div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="info">
+            <div class="info_links">
+                <a href="#" class="footer_link">Служба поддержки</a>
+                |
+                <a href="#" class="footer_link">Политика конфиденциальности</a>
+            </div>
+            Позвоните нам <a href="tel:+88005550121">8-800-555-01-21</a> 
+        </div>
+    </footer>
 </body>
 </html>
