--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordpress интенсив</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="promo">
@@ -18,7 +20,8 @@
             <h1 class="title">Создать свой сайт на WordPress</h1>
             <div class="simple">
                 <h2 class="title_big">это просто!</h2>
-                <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line_2"></div>
             </div>
             <h2 class="title">Куда сложнее сделать это правильно!</h2>
 
