Change content in html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Wordpress интенсив</title>
+    <meta name="description" content="Создать свой сайт на WordPress это просто!">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/fonts.css">
@@ -26,7 +28,7 @@
             <h2 class="title">Куда сложнее сделать это правильно!</h2>
 
             <div class="promo_text">
-                Ежедневно в России появляется более 5 000 новых сайтов.<br>
+                Ежедневно в Украине появляется более 2 000 новых сайтов.<br>
                 И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!
             </div>
 
@@ -133,7 +135,7 @@
         <div class="container">
                 <img src="img/first_webinar/laptop_people.png" alt="First webinar" class="first_img">
                 <h2 class="first_header">Первый вебинар состоится:</h2>
-                <div class="first_title">10 сентября в 20:00 по Москве</div>
+                <div class="first_title">10 сентября в 19:00 по Киеву</div>
                 <div class="first_text">Успейте записаться, количество мест ограничено!</div>
         </div>
     </section>
@@ -145,7 +147,7 @@
                 |
                 <a href="#" class="footer_link">Политика конфиденциальности</a>
             </div>
-            Позвоните нам <a href="tel:+88005550121">8-800-555-01-21</a> 
+            Позвоните нам <a href="tel:+88000000000">8-800-000-00-00</a> 
         </div>
     </footer>
 </body>
