Transform css to scss

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
             <h1 class="title">Создать свой сайт на WordPress</h1>
             <div class="simple">
                 <h2 class="title_big">это просто!</h2>
-                    <div class="line"></div>
-                    <div class="line_2"></div>
+                <div class="line"></div>
+                <div class="line_2"></div>
             </div>
             <h2 class="title">Куда сложнее сделать это правильно!</h2>
 
@@ -62,7 +62,7 @@
     <section class="waiting">
         <div class="container">
             <h2 class="waiting_header">Что вас ждет в нашем интенсиве?</h2>
-            <div class="waiting_divider"></div>
+            <div class="divider"></div>
             <div class="waiting_subheader">2 бесплатных полноценных обучающих вебинара, где:</div>
 
             <div class="waiting_wrapper">
@@ -103,7 +103,7 @@
     <section class="finish">
         <div class="container">
             <h2 class="finish_header">По окончании обучения Вы сможете!</h2>
-            <div class="finish_divider"></div>
+            <div class="divider"></div>
             <div class="finish_wrapper">
                 <div class="finish_item">
                     <div class="finish_round">
@@ -161,9 +161,9 @@
     <footer>
         <div class="info">
             <div class="info_links">
-                <a href="#" class="footer_link">Служба поддержки</a>
+                <a href="#" class="info_link">Служба поддержки</a>
                 <span>|</span>
-                <a href="#" class="footer_link">Политика конфиденциальности</a>
+                <a href="#" class="info_link">Политика конфиденциальности</a>
             </div>
             Позвоните нам <a href="tel:+88000000000">8-800-000-00-00</a> 
         </div>
