Send form - is completed. Pageup button and scroll - is completed

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section class="promo" id="up">
         <div class="container">
             <div class="logo">
                 <img src="icons/logo.png" alt="Logo" class="logo_img">
@@ -46,7 +46,7 @@
             <h2 class="title">Куда сложнее сделать это правильно!</h2>
 
             <div class="promo_text">
-                Ежедневно в Украине появляется более 2 000 новых сайтов.<br>
+                Ежедневно в Украине появляется более 3 000 новых сайтов.<br>
                 И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!
             </div>
 
@@ -190,7 +190,7 @@
         <div class="modal modal_mini" id="thanks">
             <div class="modal__close">&times;</div>
             <div class="modal__title">Спасибо за ваше обращение!</div>
-            <div class="modal__text">Я свяжусь с вами в ближайшее время :)</div>
+            <div class="modal__text">Мы перезвоним вам в ближайшее время</div>
         </div>
     </div>
 
