Add back arrow in layout and styles

--- a/src/index.html
+++ b/src/index.html
@@ -173,6 +173,10 @@
         <img src="icons/up.svg" alt="Up">
     </a>
 
+    <a href="/" class="back">
+        <img src="icons/up.svg" alt="Back">
+    </a>
+
     <div class="overlay">
         <div class="modal" id="consultation">
             <div class="modal__close">&times;</div>
